<resources>
    <string name="app_name">SharkGym3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="agregar">Agregar</string>
    <string name="fecha_dd_mm_aaaa">Fecha: dd/mm/aaaa</string>
    <string name="dni">DNI</string>
    <string name="problemas_del_cliente">Problemas del cliente</string>
    <string name="formulario">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="venir_diariamente">Venir diariamente</string>

    <string name="_10_resultados">10 Resultados</string>
    <string name="Ordenar">Ordenar</string>
    <string name="Configuración">Configuración</string>
    <string name="Sobre_nosotros">Sobre_Nosotros</string>
    <string name="Buscador">Buscador</string>
    <string name="Creador">Aplicación desarrollada por Eduardo Carmona López</string>
    <string name="Contacto">Mi correo de
        contacto es: aedcarmona@iesfranciscodelosrios.es</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="acerca_de">Acerca de</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">add</string>
    <string name="Titulo">Nueva Categoria</string>
    <string name="Descripcion">Introduzca una categoria</string>
    <string name="name_error"> Error invalid name, don´t use numbers</string>
    <string name="surname_error"> Error invalid surname, don´t use numbers</string>
    <string name="DNI_error"> Error invalid DNI</string>
    <string name="valid"></string>
    <string name="creador_por_eduardo">Creador por : Eduardo</string>
    <string name="todo">TODO</string>
    <string name="shark_gym">Shark Gym</string>
    <string name="Delete"> Limpiar </string>
    <string name="Eliminar">Delete</string>
    <string name="Ayuda">Ayuda</string>
    <string name="date_error">Error Date</string>


</resources>