<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CL_FormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical" />

                <ImageView
                    android:id="@+id/imageView_Form"
                    android:layout_width="117dp"
                    android:layout_height="115dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@mipmap/guantes"
                    android:foregroundGravity="right|bottom"
                    android:foregroundTintMode="src_over" />

                <Button
                    android:id="@+id/Limpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_phone_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Name_layout"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Name_TE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Nombre"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"

                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Surname_layout"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Surname_TE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellidos" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_address_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout7"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dniTE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dni" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_action_usu" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Problem_layout"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Problem_TE"
                        android:layout_width="238dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/problemas_del_cliente" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"

                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_layout"
                        android:layout_width="199dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/FechaTE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fecha_dd_mm_aaaa"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/Calendarioo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_action_cale" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle">

                <ImageView
                    android:id="@+id/imageSpinner_Form"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/stat_notify_more" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genero" />

                <Button
                    android:id="@+id/anadirCategoria"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Titulo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_food"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_food_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/venir_diariamente"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/Eliminar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>